# dotfiles

./: .Rprofile  .clang-format  .gitconfig  .gitignore  .gitmodules  .gvimrc  .latexmkrc  .mutagen.yml  .p10k.zsh  .textlintrc  .tigrc  .tmux.conf  .vimrc  .zpreztorc  .zprofile  .zshenv  .zshrc  ;  Brewfile  Dokcerfile  README.md  chsh  dotfilesLink.sh  flake.nix  init.sh  nvfetcher.toml
.config/: fish
.config/aquaskk/: keymap.conf  skk-jisyo.utf-8
.config/fish/: _config.fish  config.fish  config.fish.backup  config.fish.pysave  fish_plugins  (+1 more)
.config/nvim/rc/hooks/python/: pyproject.toml
.emacs.d/: *GNU Emacs*  bookmarks  custom.el  init.el  my-init.org  projectile-bookmarks.eld  recentf
.github/: dependabot.yml
.hammerspoon/: init.lua
.kaggle/: kaggle.json
_sources/: generated.json  generated.nix
aqua/: aqua.yaml
cargo-compete/: default.nix
etc/: init.sh
fish/: config.fish  fish  fish_variables
home-manager/: agent-skills.nix  darwin.nix  default.nix  gui.nix  langs.nix  llm-agent-pkg.nix  utils.nix
karabiner/: karabiner  karabiner.json
mocword/: default.nix
mocword-data/: default.nix
nix-darwin/: default.nix
node2nix/: node-packages.json  node-packages.nix
nvim/: init.vim
rassumfrassum/: default.nix
template/: cpp.snippets  python.snippets  tex.snip  tex.snippets
textlint/: default.nix  package-lock.json
textlint-rule-preset-ja-technical-writing/: defualt.nix
tmux/: .tmux.conf.osx  get_battery_tmux.sh  get_load_average_tmux.sh  get_ssid_tmux.sh  get_volume_tmux.sh
vim/: dein.toml  dein_lazy.toml
yaskkserv2/: default.nix
(+896 files in other folders)
