[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "keimoriyama", email = "keischwiiz@gmail.com" }
]
dependencies = [
    "pyright>=1.1.349",
    "black>=24.1.1",
    "isort>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "python:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
